Add dummy pages for Movies, TV, Music and Remote

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,30 @@
               </a>
             </li>
             <li ui-sref-active="active">
+              <a href ui-sref="movies">
+                <i class="fa fa-film"></i>
+                Movies
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="tv">
+                <i class="fa fa-video-camera"></i>
+                TV Shows
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="music">
+                <i class="fa fa-music"></i>
+                Music
+              </a>
+            </li>
+            <li ui-sref-active="active">
+              <a href ui-sref="remote">
+                <i class="fa fa-power-off"></i>
+                Remote
+              </a>
+            </li>
+            <li ui-sref-active="active">
               <a href ui-sref="about">
                 <i class="fa fa-info-circle"></i>
                 What is it?
