Rebrand as CornerCase

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ngBoilerplate" ng-controller="AppCtrl">
   <head>
-    <title ng-bind="pageTitle"></title>
+    <title ng-bind="pageTitle + ' | CornerCase'"></title>
 
     <!-- social media tags -->
     <meta name="twitter:card" content="summary">
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="navbar-brand">
-            ngbp
+            CornerCase
             <small>
               <a href="http://github.com/ngbp/ngbp/blob/v<%= version %>-release/CHANGELOG.md">
                 v<%= version %>
@@ -125,18 +125,14 @@
             <li><a target="_blank" href="http://github.com/ngbp/ngbp"><i class="fa fa-github-sign"></i></a></li>
           </ul>
           
-
           <p>
-            (c) 2013 <a href="http://www.joshdavidmiller.com">Josh David Miller</a>. 
-            <a href="http://github.com/ngbp/ngbp/fork_select">Fork this</a>
-            to kickstart your next project.
-            <br />
-            ngbp is based on
+            CornerCase is based on
+            <a href="http://joshdmiller.github.io/ng-boilerplate">ng-boilerplate</a>,
             <a href="http://www.angularjs.org">AngularJS</a>,
             <a href="http://getbootstrap.com">Bootstrap</a>, 
             <a href="http://angular-ui.github.com/bootstrap">UI Bootstrap</a>,
             and 
-            <a href="http://fortawesome.github.com/Font-Awesome">Font Awesome</a>.        
+            <a href="http://fortawesome.github.com/Font-Awesome">Font Awesome</a>.
           </p>
         </div>
       </div>
